<resources>
    <string name="app_name">Codage</string>
    <string name="atbash" translatable="false">AtBash</string>
    <string name="césar" translatable="false">César</string>
    <string name="vigenère" translatable="false">Vigenère</string>
    <string name="homophone" translatable="false">Homophone</string>
    <string name="playfair" translatable="false">Playfair</string>
    <string name="hill" translatable="false">Hill</string>
    <string name="transposition_rectangulaire">Rectangular transposition</string>
    <string name="des" translatable="false">DES</string>
    <string name="emptyField">You must enter all fields</string>
    <string name="crypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="result">Result :</string>
    <string name="messField">Your message to be encrypted/decrypted</string>
    <string name="decalage">Offset</string>
    <string name="infoResult">Click on the result to put it in the message area</string>
    <string name="cryptdecrypt">Encrypt / Decrypt</string>
    <string name="key">Key</string>
    <string name="keyMess">Key message</string>
    <string name="errorMatrice">Impossible, the format of the matrix will not allow decryption.</string>
    <string name="rsa" translatable="false">RSA</string>
    <string name="getP">Prime number P</string>
    <string name="getQ">Prime number Q</string>
    <string name="notPrime">" isn't a prime number"</string>
    <string name="notHex">Invalid hexadecimal format</string>
    <string name="keyNotHex">Invalid hexadecimal format of the key</string>
    <string name="validTexts">Fields must contain only letters</string>
</resources>
